# markdown-plan

./: .structure.txt  MISSION2_COMPLETE.md  MISSION2_FINAL_SUMMARY.md  MISSION3_COMPLETE.md  README.md  my-project.md  pyproject.toml
docs/: README.md  dsl-specification.md  dsl.md
plans/: project.md  resources.md  risks.md  roadmap.md
python/: my-project.md
src/: cli.py
src/core/: __init__.py
src/engine/: __init__.py
src/reports/: __init__.py  dashboard.py  gantt.py  summary.py
src/storage/: __init__.py  db.py  repository.py
