[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-plan"
version = "0.1.0"
description = "Python-native, Markdown-driven project management system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [{name = "Bicyclerun"}]
keywords = ["markdown", "planning", "project-management", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
mdplan = "src.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0", "flake8>=4.0", "mypy>=0.9"]

[tool.setuptools.packages.find]
where = ["."]
